--- a/legal/index.html
+++ b/legal/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Hex Studios is an independent game development studio based in Europe. We focus on creating games with engaging mechanics and original concepts, driven by passion and creativity.">
     <meta name="author" content="Manuel Maiani">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Hex Studios" />
+    <meta property="og:title" content="Hex Studios - Legal" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hexstudios.eu" />
+    <meta property="og:url" content="https://hexstudios.eu/legal" />
     <meta property="og:image" content="https://hexstudios.eu/assets/hex_studios_logo.png" />
     <meta property="og:image:width" content="256" />
     <meta property="og:image:height" content="256" />
-    <title>Hex Studios</title>
+    <title>Hex Studios - Legal</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="/assets/hex_studios_logo.png">
     <script src="https://kit.fontawesome.com/773ee53ac1.js" crossorigin="anonymous"></script>
