--- a/legal/index.html
+++ b/legal/index.html
@@ -8,9 +8,10 @@
     <meta name="author" content="Manuel Maiani">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Hex Studios - Legal" />
+    <meta property="og:description" content="Hex Studios is an independent game development studio based in Europe. We focus on creating games with engaging mechanics and original concepts, driven by passion and creativity." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hexstudios.eu/legal" />
-    <meta property="og:image" content="https://hexstudios.eu/assets/hex_studios_logo.png" />
+    <meta property="og:url" content="https://heelyx23.github.io/legal" />
+    <meta property="og:image" content="https://heelyx23.github.io/assets/hex_studios_logo.png" />
     <meta property="og:image:width" content="256" />
     <meta property="og:image:height" content="256" />
     <title>Hex Studios - Legal</title>
@@ -64,5 +65,6 @@
 <script src="script.js"></script>
 
 </body>
+
 
 </html>
