--- a/team/index.html
+++ b/team/index.html
@@ -16,7 +16,7 @@
     <meta property="og:image:height" content="256" />
     <title>Hex Studios - Team</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" type="image/x-icon" href="assets/hex_studios_logo.png">
+    <link rel="icon" type="image/x-icon" href="/assets/hex_studios_logo.png">
     <script src="https://kit.fontawesome.com/773ee53ac1.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
