--- a/projects/index.html
+++ b/projects/index.html
@@ -41,7 +41,7 @@
     <h2 class="title2">Projects</h2>
     <a class="project-anchor" href="momentum"><div class="project-card momentum">
         <div class="project-img">
-            <img src="/assets/momentum_logo.png">
+            <img src="../assets/momentum_logo.png">
         </div>
         <div class="project-info">
             <p class="project-title">Momentum</p>
