--- a/projects/index.html
+++ b/projects/index.html
@@ -14,9 +14,9 @@
     <meta property="og:image" content="https://heelyx23.github.io/assets/hex_studios_logo.png" />
     <meta property="og:image:width" content="256" />
     <meta property="og:image:height" content="256" />
-    <title>Hex Studios - Team</title>
+    <title>Hex Studios - Projects</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" type="image/x-icon" href="assets/hex_studios_logo.png">
+    <link rel="icon" type="image/x-icon" href="/assets/hex_studios_logo.png">
     <script src="https://kit.fontawesome.com/773ee53ac1.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
@@ -41,7 +41,7 @@
     <h2 class="title2">Projects</h2>
     <a class="project-anchor" href="momentum"><div class="project-card momentum">
         <div class="project-img">
-            <img src="/assets/momentum_logo.png">
+            <img src="../assets/momentum_logo.png">
         </div>
         <div class="project-info">
             <p class="project-title">Momentum</p>
