--- a/projects/momentum/index.html
+++ b/projects/momentum/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="https://heelyx23.github.io/assets/hex_studios_logo.png" />
     <meta property="og:image:width" content="256" />
     <meta property="og:image:height" content="256" />
-    <title>Hex Studios</title>
+    <title>Hex Studios - Momentum</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="/assets/hex_studios_logo.png">
     <script src="https://kit.fontawesome.com/773ee53ac1.js" crossorigin="anonymous"></script>
