Clean CSS & Remove Useless Assets

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 <div class="main">
     <h1 class="title">Hex Studios</h1>
-    <img src="/assets/hex_studios_logo.png" class="logo" alt="Hex Studios logo">
+    <img src="assets/hex_studios_logo.png" class="logo" alt="Hex Studios logo">
     <p class="about">Hex Studios is an indie game development studio based in Europe, currently ran by a solo developer from Italy.
         <br><br>
         Our main focus is making games that the community may find original and engaging, with cool and fun gameplay mechanics, as well as interesting lore.
