--- a/404.html
+++ b/404.html
@@ -15,17 +15,17 @@
     <meta property="og:image:width" content="256" />
     <meta property="og:image:height" content="256" />
     <title>Hex Studios</title>
-    <link rel="stylesheet" href="stylesheet-404.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="assets/hex_studios_logo.png">
     <script src="https://kit.fontawesome.com/773ee53ac1.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body>
-<div class="main">
-    <h1 class="title">404</h1>
-    <h2 class="title2">File Not Found</h2>
-    <p class="about">Oops! You shouldn't be here!</p>
+<div class="main-404">
+    <h1 class="title-404">404</h1>
+    <h2 class="title2-404">File Not Found</h2>
+    <p class="about-404">Oops! You shouldn't be here!</p>
     <a class="back" href="/"><p class="back-button">Go Back!</p></a>
 </div>
 
