--- a/legal/index.html
+++ b/legal/index.html
@@ -62,7 +62,7 @@
     <p class="about"><strong>Last Updated: 06/08/2025 (DD/MM/YYYY)</strong></p>
 </div>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 
 </body>
 
