--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
     <div class="tooltip legal"><p>Legal</p></div>
 </div>
 <div class="navbar">
-    <a class="active home-nav" href="/"><i class="fa-solid fa-house fa-2xl"></i></a>
-    <a class="nav-link team-nav" href="/team"><i class="fa-solid fa-users fa-2xl"></i></a>
-    <a class="nav-link projects-nav" href="/projects"><i class="fa-solid fa-list fa-2xl"></i></a>
-    <a class="nav-link contact-nav" href="/contact"><i class="fa-solid fa-envelope fa-2xl"></i></a>
-    <a class="nav-link legal-nav" href="/legal"><i class="fa-solid fa-scale-balanced fa-2xl"></i></a>
+    <div class="navbar1">
+        <a class="active home-nav" href="/"><i class="fa-solid fa-house"></i></a>
+        <a class="nav-link team-nav" href="/team"><i class="fa-solid fa-users"></i></a>
+        <a class="nav-link projects-nav" href="/projects"><i class="fa-solid fa-list"></i></a>
+    </div>
+    <div class="navbar2">
+        <a class="nav-link contact-nav" href="/contact"><i class="fa-solid fa-envelope"></i></a>
+        <a class="nav-link legal-nav" href="/legal"><i class="fa-solid fa-scale-balanced"></i></a>
+    </div>
 </div>
 <div class="main">
     <h1 class="title">Hex Studios</h1>
