--- a/projects/index.html
+++ b/projects/index.html
@@ -15,6 +15,7 @@
     <meta property="og:image:width" content="256" />
     <meta property="og:image:height" content="256" />
     <title>Hex Studios - Projects</title>
+    <link rel="stylesheet" href="/stylesheet.css">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="/assets/hex_studios_logo.png">
     <script src="https://kit.fontawesome.com/773ee53ac1.js" crossorigin="anonymous"></script>
@@ -30,11 +31,15 @@
     <div class="tooltip legal"><p>Legal</p></div>
 </div>
 <div class="navbar">
-    <a class="nav-link home-nav" href="/"><i class="fa-solid fa-house fa-2xl"></i></a>
-    <a class="nav-link team-nav" href="/team"><i class="fa-solid fa-users fa-2xl"></i></a>
-    <a class="active projects-nav" href="/projects"><i class="fa-solid fa-list fa-2xl"></i></a>
-    <a class="nav-link contact-nav" href="/contact"><i class="fa-solid fa-envelope fa-2xl"></i></a>
-    <a class="nav-link legal-nav" href="/legal"><i class="fa-solid fa-scale-balanced fa-2xl"></i></a>
+    <div class="navbar1">
+        <a class="nav-link home-nav" href="/"><i class="fa-solid fa-house"></i></a>
+        <a class="nav-link team-nav" href="/team"><i class="fa-solid fa-users"></i></a>
+        <a class="active projects-nav" href="/projects"><i class="fa-solid fa-list"></i></a>
+    </div>
+    <div class="navbar2">
+        <a class="nav-link contact-nav" href="/contact"><i class="fa-solid fa-envelope"></i></a>
+        <a class="nav-link legal-nav" href="/legal"><i class="fa-solid fa-scale-balanced"></i></a>
+    </div>
 </div>
 <div class="main">
     <h1 class="title">Hex Studios</h1>
