Update Legal & Fix Scroll

--- a/legal/index.html
+++ b/legal/index.html
@@ -47,7 +47,9 @@
     <p class="about">Hex Studios is an independent game development studio founded and operated by Manuel Maiani. All content on this website, including text, design, images, logos, and other media, is the intellectual property of Manuel Maiani and Hex Studios unless otherwise stated.
         <br>
         <br>
-        This website does not collect personal information or use tracking technologies.
+        This website generally does not collect personal information or use tracking technologies.
+        <br>
+        However, if the user chooses to contact us via the website's contact form, we may collect their name and email address solely for the purpose of responding to their inquiry. The contact form is powered by Formspree, a third-party service, and users should refer to <a class="link" href="https://formspree.io/legal/privacy-policy/" target="_blank">Formspree’s privacy policy</a> for details on how their data is handled by that service.
         <br>
         <br>
         "MOMENTUM" and all associated names, artwork, characters, and assets are the exclusive property of Hex Studios unless stated otherwise. Unauthorized use, reproduction, modification, or distribution of the studio’s games, branding, or website content is strictly prohibited without written permission.
@@ -64,7 +66,7 @@
         <br>
         <strong>© 2025 Manuel Maiani (Hex Studios). All rights reserved.</strong>
     </p>
-    <p class="about"><strong>Last Updated: 06/08/2025 (DD/MM/YYYY)</strong></p>
+    <p class="about"><strong>Last Updated: 12/08/2025 (DD/MM/YYYY)</strong></p>
 </div>
 
 <script src="/script.js"></script>
